sumo/tests/traci/_deprecated/PositionConversion/InvalidPosOnRoad/testclient.prog
simstep2 1
posconversion_roadpos e_m0 -1 0 3
simstep2 2
